objects/IndividualApplication.object
<CustomObject>
    <fields>
        <fullName>Age_Group_Served__c</fullName>
        <label>Age Group Served</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Children up to 12 years</fullName>
                </value>
                <value>
                    <fullName>Youth (13-24)</fullName>
                </value>
                <value>
                    <fullName>Adults (25-64)</fullName>
                </value>
                <value>
                    <fullName>Seniors (65 and over)</fullName>
                </value>
                <value>
                    <fullName>General population (all age groups)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>All_Documents_Uploaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>All Documents Uploaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Amount_Requested__c</fullName>
        <label>Amount Requested</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Community_Size__c</fullName>
        <label>Community Size</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rural or Small Communities (20,000 or less)</fullName>
                </value>
                <value>
                    <fullName>Mid-size Communities (20,001 - 100,000)</fullName>
                </value>
                <value>
                    <fullName>Urban Centres and Metropolitan Suburbs (over 100,000)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <label>Contact Person</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Describe_your_organisation_experience__c</fullName>
        <label>Describe your organisation experience</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_People_Served__c</fullName>
        <label>Estimated Total People Served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Executive_Summary__c</fullName>
        <label>Executive Summary</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID used for data manipulation and reference across orgs.

Created by Brian Ricter on 11/17/2022</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gap_Justification__c</fullName>
        <label>Gap Justification</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Gap_Year__c</fullName>
        <label>Gap Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Gap Year</fullName>
                </value>
                <value>
                    <fullName>Less than 2 years</fullName>
                </value>
                <value>
                    <fullName>More than 2 years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Geography_Served__c</fullName>
        <label>Lived Experience of Population Served</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In care/leaving care</fullName>
                </value>
                <value>
                    <fullName>Low income</fullName>
                </value>
                <value>
                    <fullName>Newcomers/refugees</fullName>
                </value>
                <value>
                    <fullName>People with disabilities</fullName>
                </value>
                <value>
                    <fullName>People living with mental health challenges/addiction</fullName>
                </value>
                <value>
                    <fullName>Underhoused/homeless</fullName>
                </value>
                <value>
                    <fullName>General Population</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Have_you_previously_recived_grant__c</fullName>
        <label>Have you previously recived grant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_will_this_project_be_sustainable__c</fullName>
        <label>How will this project be sustainable</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_this_project_benefit_your_commu__c</fullName>
        <label>How will this project benefit your commu</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_will_you_attract_mentors_and_partici__c</fullName>
        <label>How will you attract mentors and partici</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Identity_of_Population_Served__c</fullName>
        <label>Identity of Population Served</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Indigenous or Aboriginal</fullName>
                </value>
                <value>
                    <fullName>2SLGBTQIA+</fullName>
                </value>
                <value>
                    <fullName>Other racialized groups</fullName>
                </value>
                <value>
                    <fullName>General Population</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLM_Justification__c</fullName>
        <label>Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Review_Outcome__c</fullName>
        <label>Manual Review Outcome</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mentor__c</fullName>
        <label>Mentor</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Participants__c</fullName>
        <label>No of Participants</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_people_in_family__c</fullName>
        <label>Number of people in family</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>3-5 people</fullName>
                </value>
                <value>
                    <fullName>5-7 people</fullName>
                </value>
                <value>
                    <fullName>More than 7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Organisation_Name__c</fullName>
        <label>Organisation Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Funding_Sources__c</fullName>
        <label>Other Funding Sources</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Pin_Code__c</fullName>
        <label>Pin Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Position_Role__c</fullName>
        <label>Position / Role</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Program_Goals__c</fullName>
        <label>Program Goals</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>Program</referenceTo>
        <relationshipLabel>Individual Applications</relationshipLabel>
        <relationshipName>Individual_Applications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Date__c</fullName>
        <label>Project Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Summary__c</fullName>
        <label>Project Summary</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Student_Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Student_City__c</fullName>
        <label>City</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Country__c</fullName>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Student_Pincode__c</fullName>
        <label>Pincode</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Student_State__c</fullName>
        <label>State</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supporting_Documents__c</fullName>
        <label>Supporting Documents</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Letters of support/ partnership</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Project_Cost__c</fullName>
        <label>Total Project Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total__c</fullName>
        <label>Total</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Who_will_Benifit__c</fullName>
        <label>Who will Benifit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <label>10 percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10th_Pass_Year__c</fullName>
        <label>10th Pass Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12th_Percentage__c</fullName>
        <label>12th Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X12th_passing_year__c</fullName>
        <label>12th passing year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yearly_Family_Income__c</fullName>
        <label>Yearly Family Income</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1.2 Lakhs upto 2.4 Lakhs P.A</fullName>
                </value>
                <value>
                    <fullName>2.4+ Lakhs upto 5 Lakhs P.A</fullName>
                </value>
                <value>
                    <fullName>More than 5 Lakhs P.A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Zip_Code_Postal_Code__c</fullName>
        <label>Zip Code/Postal Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>color_code__c</fullName>
        <label>color code</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value_set_from_lwc__c</fullName>
        <defaultValue>false</defaultValue>
        <label>value set from lwc</label>
        <type>Checkbox</type>
    </fields>
    <recordTypes>
        <fullName>Grantmaking</fullName>
        <active>true</active>
        <description>Basic record type for all IndividualApplications</description>
        <label>Grantmaking</label>
    </recordTypes>
    <recordTypes>
        <fullName>Scholarship</fullName>
        <active>false</active>
        <description>Record Type for Scholarship Application</description>
        <label>Scholarship</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>